--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "hono": "^4.7.11"
   },
   "devDependencies": {
-    "@types/bun": "latest"
-  }
+    "@types/bun": "latest",
+    "wrangler": "^4.19.1"
+  },
+  "license": "MIT"
 }
