--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,29 @@
 name = "peruvian-holiday-api"
 main = "src/index.ts"
-compatibility_date = "2023-01-01"
+minify = true
+compatibility_date = "2025-01-10"
 
-[build]
-command = "bun run build"
+# compatibility_flags = [ "nodejs_compat" ]
 
-[build.upload]
-format = "modules"
+# [vars]
+# MY_VAR = "my-variable"
 
-[[routes]]
-pattern = "*"
-script = "src/index.ts"
+# [[kv_namespaces]]
+# binding = "MY_KV_NAMESPACE"
+# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+
+# [[r2_buckets]]
+# binding = "MY_BUCKET"
+# bucket_name = "my-bucket"
+
+# [[d1_databases]]
+# binding = "DB"
+# database_name = "my-database"
+# database_id = ""
+
+# [ai]
+# binding = "AI"
+
+# [observability]
+# enabled = true
+# head_sampling_rate = 1
